@@ -1,3 +1,8 @@
+2014-10-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* support/regression/tests/bug-2254.c:
+	  Regression test for bug #2254.
+
 2014-10-22 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
